# myclib

./: .clang-format  .gitignore  README.md  meson.build  native_cl.ini
examples/hashmap/: hm1.c
examples/queue/: q1.c
examples/string/: str1.c  str2.c
hashmap/: hashmap.c  myhashmap.c  myhashmap.h
queue/: myqueue.c  myqueue.h
set/: myset.c  myset.h
socket/: mysocket.c  mysocket.h
stack/: mystack.c  mystack.h
string/: mystring.c  mystring.h
test/: test.c
test/hashmap/: hm1.c
test/queue/: q1.c  queue1.c
test/set/: set1.c
test/socket/: socket1.c
test/stack/: s1.c  stack1.c
test/string/: str1.c  str2.c  str3.c
test/vector/: v1.c  vec1.c
vector/: myvector.c  myvector.h
